following styles improvements

--- a/src/app/credentials/login/login.component.html
+++ b/src/app/credentials/login/login.component.html
@@ -1,18 +1,3 @@
-<!--<section class="form">
-<form [formGroup]="loginForm">
-  <div>
-    <label>Login:
-      <input type="text" formControlName="name">
-    </label> <br>
-    <label>Haslo:
-      <input type="text" formControlName="password">
-    </label> <br>
-  </div>
-  <button class="submitbtn" (click)="validateLogin()">Zaloguj</button>
-</form>
-</section>
-<a routerLink="/">Powrot</a>-->
-
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
@@ -28,7 +13,7 @@
         </div>
 
         <div class="wrap-input100 rs1 validate-input">
-          <input class="input100" type="password" formControlName="password" placeholder="Haslo">
+          <input class="input100" type="password" formControlName="password" placeholder="Hasło">
           <span class="focus-input100-1"></span>
           <span class="focus-input100-2"></span>
         </div>
@@ -46,4 +31,4 @@
   </div>
 </div>
 
-<a routerLink="/">Powrot</a>
+<button class="button-back" routerLink="/">Powrót</button>
