--- a/src/app/credentials/login/login.component.scss
+++ b/src/app/credentials/login/login.component.scss
@@ -1,29 +1,15 @@
-/*!/////////////////////////////////////////////////////////////////
-[ FONT ]*/
-
-/*@font-face {
-  font-family: OpenSans-Regular;
-  src: url('../fonts/OpenSans/OpenSans-Regular.ttf');
-}*/
-
-
-
-/*!/////////////////////////////////////////////////////////////////
-[ RESTYLE TAG ]*/
 
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body, html {
-  height: 100%;
   font-family: OpenSans-Regular, sans-serif;
 
 }
 
-/*---------------------------------------------*/
 a {
   font-family: OpenSans-Regular;
   font-size: 14px;
@@ -44,9 +30,8 @@ a:hover {
   text-decoration: none;
 }
 
-/*---------------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
-  margin: 0px;
+  margin: 0;
 }
 
 p {
@@ -54,16 +39,14 @@ p {
   font-size: 14px;
   line-height: 1.7;
   color: #666666;
-  margin: 0px;
+  margin: 0;
 }
 
 ul, li {
-  margin: 0px;
+  margin: 0;
   list-style-type: none;
 }
 
-
-/*---------------------------------------------*/
 input {
   outline: none;
   border: none;
@@ -88,7 +71,6 @@ textarea:-moz-placeholder { color: #666666;}
 textarea::-moz-placeholder { color: #666666;}
 textarea:-ms-input-placeholder { color: #666666;}
 
-/*---------------------------------------------*/
 button {
   outline: none !important;
   border: none;
@@ -99,12 +81,21 @@ button:hover {
   cursor: pointer;
 }
 
+.button-back{
+  background-color: #af2c22;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 10px;
+  margin-left: 45vw;
+}
+
 iframe {
   border: none !important;
 }
 
-/*!/////////////////////////////////////////////////////////////////
-[ Utility ]*/
 .txt1 {
   font-family: OpenSans-Regular;
   font-size: 15px;
@@ -122,10 +113,6 @@ iframe {
 .hov1:hover {
   text-decoration: underline;
 }
-
-
-/*!/////////////////////////////////////////////////////////////////
-[ login ]*/
 
 .limiter {
   width: 100%;
@@ -161,9 +148,6 @@ iframe {
 }
 
 
-/*==================================================================
-[ Form ]*/
-
 .login100-form {
   width: 100%;
 }
@@ -177,8 +161,6 @@ iframe {
   text-align: center;
 }
 
-/*------------------------------------------------------------------
-[ Input ]*/
 
 .wrap-input100 {
   width: 100%;
@@ -202,14 +184,11 @@ iframe {
 }
 
 
-/*---------------------------------------------*/
 input.input100 {
   height: 68px;
   padding: 0 25px 0 25px;
 }
 
-/*------------------------------------------------------------------
-[ Focus Input ]*/
 
 .focus-input100-1,
 .focus-input100-2 {
@@ -305,8 +284,6 @@ input.input100 {
 }
 
 
-/*------------------------------------------------------------------
-[ Button ]*/
 .container-login100-form-btn {
   width: 100%;
   display: -webkit-box;
@@ -346,9 +323,6 @@ input.input100 {
   background-color: #333333;
 }
 
-
-/*------------------------------------------------------------------
-[ Alert validate ]*/
 
 .validate-input {
   position: relative;
