--- a/src/app/dashboard/admin-panel/admin-panel.component.html
+++ b/src/app/dashboard/admin-panel/admin-panel.component.html
@@ -1,9 +1,9 @@
 <section class="menu">
   <div class="button-menu">
-    <button (click)="showDishesList()">Lista dan</button>
+    <button (click)="showDishesList()">Lista dań</button>
   </div>
   <div class="button-menu">
-    <button (click)="showOrdersList()">Lista zamowien</button>
+    <button (click)="showOrdersList()">Lista zamówień</button>
   </div>
 </section>
 <div class="list">
