--- a/src/app/dashboard/dashboard-order-details/dashboard-order-details.component.html
+++ b/src/app/dashboard/dashboard-order-details/dashboard-order-details.component.html
@@ -28,7 +28,7 @@
     <div class="buttons">
       <button class="button" (click)="changeStatusOfOrderToDelivered()">Dostarczono</button>
       <button class="button" (click)="changeStatusOfOrderToInTransit()">W trakcie dowozu</button>
-      <button class="button" (click)="changeStatusOfOrderToAccepted()">Przyjeto do realizacji</button>
+      <button class="button" (click)="changeStatusOfOrderToAccepted()">Przyjęto do realizacji</button>
     </div>
 
   </div>
