--- a/src/app/orders/order-basket/order-basket.component.html
+++ b/src/app/orders/order-basket/order-basket.component.html
@@ -11,7 +11,7 @@
 <span>Razem: {{service.getBasketCost()}} zł</span>
 <br>
 <div class="containsButton">
-  <button [disabled]="service.getBasketCost()<=0" class="buttonOrder" routerLink="/summary">Zamowienie</button>
+  <button [disabled]="service.getBasketCost()<=0" class="buttonOrder" routerLink="/summary">Zamówienie</button>
 </div>
 
 
