--- a/src/app/orders/order-info/order-info.component.html
+++ b/src/app/orders/order-info/order-info.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="message" style="text-align: center">
-    <h2>Zamowienie zostalo wyslane</h2>
-    <h2>Dziekujemy za wybranie najlepszej pizzy w miescie! :)</h2>
-      <button routerLink="/">Powrot do strony glownej</button>
+    <h2>Zamówienie zostało wysłane</h2>
+    <h2>Dziękujemy za wybranie najlepszej pizzy w mieście! :)</h2>
+      <button routerLink="/">Powrót do strony głównej</button>
   </div>
   <div>
     <img src="../../../assets/icons/pizza-box.png">
