--- a/src/app/dashboard/dashboard-order-details/dashboard-order-details.component.scss
+++ b/src/app/dashboard/dashboard-order-details/dashboard-order-details.component.scss
@@ -7,10 +7,11 @@
   height: 70vh;
   border-radius: 30px;
   display:  flex;
-  margin: 10px;
   top: 100px;
   right: 0;
   justify-content: center;
+  margin-left: 15vw;
+  margin-top: 50px;
 }
 
 .tg {
@@ -19,7 +20,7 @@
   border-color: #999;
   text-align: justify;
   vertical-align: top;
-  margin-top: 20px;
+  margin-top: 50px;
   margin-bottom: 30px;
 }
 
@@ -77,11 +78,13 @@
 }
 
 .returnButton {
-  background-color: darkseagreen;
+  background-color: #af2c22;
   border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   font-size: 10px;
+  margin-top: 15px;
+  margin-left: 45vw;
 }
