--- a/src/app/dashboard/dashboard-order-address/dashboard-order-address.component.scss
+++ b/src/app/dashboard/dashboard-order-address/dashboard-order-address.component.scss
@@ -1,16 +1,17 @@
+body {
+  text-align: center;
+}
+
 .menu{
   background: lightgrey;
   border: thin black;
-  border-top: 20px;
   width: 50vw;
   height: 50vh;
   border-radius: 30px;
   display:  flex;
-  top: 100px;
   right: 0;
   justify-content: center;
-  margin-left: 25vw;
-  margin-top: 50px;
+  margin: 50px auto;
   justify-self: center;
 }
 
@@ -65,6 +66,6 @@ table {
   text-align: center;
   text-decoration: none;
   font-size: 10px;
-  margin-left: 45vw;
-  margin-top: 15px;
+  margin: 15px auto;
+  display: flex;
 }
