--- a/src/app/dashboard/dashboard-order-details/dashboard-order-details.component.scss
+++ b/src/app/dashboard/dashboard-order-details/dashboard-order-details.component.scss
@@ -1,17 +1,17 @@
+body{
+  text-align: center;
+}
 
 .menu{
   background: lightgrey;
   border: thin black;
-  border-top: 20px;
   width: 65vw;
   height: 70vh;
   border-radius: 30px;
   display:  flex;
-  top: 100px;
   right: 0;
   justify-content: center;
-  margin-left: 15vw;
-  margin-top: 50px;
+  margin: 50px auto 0;
 }
 
 .tg {
@@ -85,6 +85,6 @@
   text-align: center;
   text-decoration: none;
   font-size: 10px;
-  margin-top: 15px;
-  margin-left: 45vw;
+  margin: 15px auto;
+  display: flex;
 }
