--- a/src/app/orders/order/order.component.scss
+++ b/src/app/orders/order/order.component.scss
@@ -25,7 +25,7 @@ label {
   padding-top: 10px;
 }
 
-input[type=text], input[type=number], input[type=email] {
+input[type=text], input[type=tel], input[type=email] {
   width: 40vw;
   padding: 10px;
   margin: 0 0 10px 0;
@@ -34,7 +34,7 @@ input[type=text], input[type=number], input[type=email] {
   background: #f1f1f1;
 }
 
-input[type=text]:focus, input[type=number]:focus, input[type=email]:focus {
+input[type=text]:focus, input[type=tel]:focus, input[type=email]:focus {
   background-color: #ddd;
   outline: none;
 }
