--- a/src/app/dashboard/dashboard-dish-details/dashboard-dish-details.component.html
+++ b/src/app/dashboard/dashboard-dish-details/dashboard-dish-details.component.html
@@ -8,7 +8,7 @@
     </colgroup>
     <tr>
       <td class="tg-picture" rowspan="2"><img
-        src="https://michalwrzosek.pl/wp-content/uploads/2018/01/pizza-gora-5.png"></td>
+        src="{{dish.imageSource}}"></td>
       <td class="tg-info">
         <ul>
           <li>{{dish.id}}. {{dish.name}}</li>
